--- a/src/resume.less
+++ b/src/resume.less
@@ -29,6 +29,25 @@ strong {
   padding: 0 3px;
   background-color: #f7f7f7;
 }
+.last-modified {
+  position: absolute;
+  top: 30px;
+  left: 50%;
+  width: 1000px;
+  transform: translateX(-50%);
+  text-align: right;
+  font-size: 12px;
+  color: #bbb;
+  @media screen and (max-width: 1024px) {
+    width: auto;
+    top: auto;
+    left: 12px;
+    bottom: 8px;
+    transform: translateX(0);
+    text-align: left;
+    color: #d1d1d1;
+  }
+}
 
 .container {
   background-color: #fff;
@@ -38,6 +57,11 @@ strong {
   border-radius: 5px;
   box-shadow: 0 0 15px silver;
   transition: all 0.2s ease-in-out;
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+  }
 }
 .header {
   padding: 30px 50px;
@@ -189,6 +213,65 @@ strong {
         flex: 1;
         padding: 0 40px;
       }
+    }
+  }
+}
+
+.btn {
+  display: inline-block;
+  padding: 0 5px;
+  border: 1px solid @color-main;
+  border-radius: 3px;
+  font-family: Menlo, @font-family;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: @color-main;
+  &:hover {
+    color: #fff;
+    background-color: @color-main;
+  }
+}
+.pdf {
+  display: inline-block;
+  position: fixed;
+  z-index: 10;
+  bottom: 6px;
+  left: 50%;
+  margin-left: 520px;
+  padding: 0 8px;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 26px;
+  color: #fff;
+  background-color: @color-main;
+  @media screen and (max-width: 1246px) {
+    left: auto;
+    right: 8px;
+    margin-left: 0;
+  }
+}
+footer {
+  position: relative;
+  text-align: center;
+  width: 1024px;
+  margin: 30px auto;
+  &.github-footer {
+    display: block;
+  }
+  &.print-footer {
+    display: none;
+  }
+  .footer-link {
+    display: inline-block;
+    color: #d1d1d1;
+    .iconfont {
+      vertical-align: middle;
+      margin-right: 2px;
+    }
+    @media screen and (max-width: 1024px) {
+      margin-top: 20px;
+      margin-bottom: 40px;
     }
   }
 }
