--- a/src/css/resume.less
+++ b/src/css/resume.less
@@ -170,7 +170,7 @@ strong {
   color: @mainText;
   display: flex;
   @media screen and (max-width: 720px) {
-    padding: 20px 10px 50px;
+    padding: 0;
   }
   @media screen and (max-width: 1024px) {
     display: block;
@@ -226,6 +226,7 @@ strong {
     .item-stage {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       color: @subText;
       .mid {
         flex: 1;
