--- a/src/css/print.less
+++ b/src/css/print.less
@@ -4,6 +4,9 @@
   body {
     padding-top: 0;
   }
+  .page-padding {
+    height: 50px;
+  }
   .container {
     width: 970px;
     height: 1372px;
