--- a/src/css/resume.less
+++ b/src/css/resume.less
@@ -9,7 +9,12 @@
 p {
   line-height: 26px;
 }
-
+.indent-2 {
+  text-indent: 2em; /* 设置首行缩进为2个em单位 */
+  strong {
+    text-indent: 0;
+  }
+}
 em {
   font-family: @font-family;
   font-size: 13px;
