--- a/src/css/resume.less
+++ b/src/css/resume.less
@@ -31,7 +31,7 @@ strong {
   font-family: Menlo, @font-family;
   font-size: 12px;
   line-height: 14px;
-  border: 1px solid #d1d1d1;
+  border: 1px solid #bbbbbb;
   border-radius: 3px;
   margin: 2px;
   padding: 0 3px;
@@ -51,7 +51,7 @@ strong {
     top: auto;
     bottom: 40px;
     text-align: left;
-    color: #d1d1d1;
+    color: #bbbbbb;
   }
 }
 
@@ -305,9 +305,10 @@ footer {
   }
   .footer-link {
     display: inline-block;
-    color: #d1d1d1;
+    color: #bbbbbb;
     .iconfont {
       margin-right: 2px;
+      color: #d1d1d1;
     }
     @media screen and (max-width: 1024px) {
       margin-top: 20px;
