--- a/src/css/print.less
+++ b/src/css/print.less
@@ -25,7 +25,7 @@
     bottom: 30px;
     text-align: left;
     padding-left: 50px;
-    color: #d1d1d1;
+    color: #bbbbbb;
   }
   footer {
     position: fixed;
